trx amt removed l: 0.97700

--- a/model.ipynb
+++ b/model.ipynb
@@ -252,8 +252,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train.drop('TransactionDT', axis=1, inplace=True)\n",
-    "X_test.drop('TransactionDT', axis=1, inplace=True)"
+    "X_train.drop(['TransactionDT', 'TransactionAmt'], axis=1, inplace=True)\n",
+    "X_test.drop(['TransactionDT', 'TransactionAmt'],, axis=1, inplace=True)"
    ]
   },
   {
@@ -381,11 +381,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-06T11:21:00.211110Z",
-     "start_time": "2019-09-06T10:06:18.947512Z"
+     "end_time": "2019-09-06T12:51:34.659151Z",
+     "start_time": "2019-09-06T11:22:28.184891Z"
     },
     "scrolled": true
    },
@@ -393,7 +393,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8fd8701647c64dd288e07b84a67d3bce",
+       "model_id": "68b3ada96bd84ef3aa085586f67cd9ec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -408,14 +408,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ROC accuracy: 0.9750555115474047, Train: 0.9999886512564585\n",
-      "ROC accuracy: 0.9785439571047838, Train: 0.999984997638542\n",
-      "ROC accuracy: 0.9771678049682662, Train: 0.9999792164501086\n",
-      "ROC accuracy: 0.9774585060473232, Train: 0.9999807818743672\n",
-      "ROC accuracy: 0.9757612669630091, Train: 0.9999815930376637\n",
-      "ROC accuracy: 0.9763278313758115, Train: 0.999986780272101\n",
-      "ROC accuracy: 0.9776690132104133, Train: 0.9999789600435759\n",
-      "ROC accuracy: 0.9770905326434537, Train: 0.9999807259658091\n",
+      "ROC accuracy: 0.9752166854560683, Train: 0.9999880028138726\n",
+      "ROC accuracy: 0.978549489713329, Train: 0.9999846402519508\n",
+      "ROC accuracy: 0.9775330875670358, Train: 0.9999857411401932\n",
+      "ROC accuracy: 0.9779064734264544, Train: 0.9999820012259492\n",
+      "ROC accuracy: 0.9759618973923397, Train: 0.9999879506811296\n",
+      "ROC accuracy: 0.9760439850075724, Train: 0.999982252164232\n",
+      "ROC accuracy: 0.9777317260455965, Train: 0.9999817054370517\n",
+      "ROC accuracy: 0.9770691545023485, Train: 0.9999847023569826\n",
       "\n",
       "\n"
      ]
@@ -423,10 +423,10 @@
     {
      "data": {
       "text/plain": [
-       "0.9768843029825582"
+       "0.9770015623888431"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,27 +448,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-05T09:56:32.547751Z",
-     "start_time": "2019-09-05T09:48:52.972Z"
+     "end_time": "2019-09-06T12:58:48.592039Z",
+     "start_time": "2019-09-06T12:58:48.587765Z"
     }
    },
    "outputs": [],
    "source": [
-    "# ROC accuracy: 0.9750555115474047, Train: 0.9999886512564585\n",
-    "# ROC accuracy: 0.9785439571047838, Train: 0.999984997638542\n",
-    "# ROC accuracy: 0.9771678049682662, Train: 0.9999792164501086\n",
-    "# ROC accuracy: 0.9774585060473232, Train: 0.9999807818743672\n",
-    "# ROC accuracy: 0.9757612669630091, Train: 0.9999815930376637\n",
-    "# ROC accuracy: 0.9763278313758115, Train: 0.999986780272101\n",
-    "# ROC accuracy: 0.9776690132104133, Train: 0.9999789600435759\n",
-    "# ROC accuracy: 0.9770905326434537, Train: 0.9999807259658091\n",
+    "# ROC accuracy: 0.9752166854560683, Train: 0.9999880028138726\n",
+    "# ROC accuracy: 0.978549489713329, Train: 0.9999846402519508\n",
+    "# ROC accuracy: 0.9775330875670358, Train: 0.9999857411401932\n",
+    "# ROC accuracy: 0.9779064734264544, Train: 0.9999820012259492\n",
+    "# ROC accuracy: 0.9759618973923397, Train: 0.9999879506811296\n",
+    "# ROC accuracy: 0.9760439850075724, Train: 0.999982252164232\n",
+    "# ROC accuracy: 0.9777317260455965, Train: 0.9999817054370517\n",
+    "# ROC accuracy: 0.9770691545023485, Train: 0.9999847023569826\n",
     "\n",
     "\n",
-    "# 0.9768843029825582"
+    "# 0.9770015623888431"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
