--- a/model.ipynb
+++ b/model.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-06T08:42:48.385672Z",
-     "start_time": "2019-09-06T08:42:46.063387Z"
+     "end_time": "2019-09-06T13:30:40.403252Z",
+     "start_time": "2019-09-06T13:30:38.116827Z"
     }
    },
    "outputs": [
@@ -52,8 +52,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-06T08:43:14.948437Z",
-     "start_time": "2019-09-06T08:43:14.945061Z"
+     "end_time": "2019-09-06T13:30:40.408170Z",
+     "start_time": "2019-09-06T13:30:40.405216Z"
     },
     "lines_to_next_cell": 2
    },
@@ -69,8 +69,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-06T08:43:22.601219Z",
-     "start_time": "2019-09-06T08:43:15.187275Z"
+     "end_time": "2019-09-06T13:30:47.776200Z",
+     "start_time": "2019-09-06T13:30:40.410517Z"
     },
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a",
@@ -95,8 +95,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-06T08:45:34.045832Z",
-     "start_time": "2019-09-06T08:43:22.603271Z"
+     "end_time": "2019-09-06T13:33:18.431373Z",
+     "start_time": "2019-09-06T13:30:47.778543Z"
     }
    },
    "outputs": [
@@ -165,28 +165,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-06T08:45:34.050053Z",
-     "start_time": "2019-09-06T08:45:34.047770Z"
+     "end_time": "2019-09-06T13:33:18.461172Z",
+     "start_time": "2019-09-06T13:33:18.453541Z"
     }
    },
    "outputs": [],
    "source": [
     "# columns = list(set(\n",
-    "#     ['dist1', 'dist2'] \\\n",
-    "# + ['C{}'.format(i) for i in range(1,15)] \\\n",
+    "# ['C{}'.format(i) for i in range(1,15)] \\\n",
     "# + ['D{}'.format(i) for i in range(1,16)] \\\n",
-    "# + ['V' + str(i) for i in range(1,340)] \\\n",
-    "# + ['id_' + str(i).zfill(2) for i in range(1, 12)]))\n",
+    "# + ['V' + str(i) for i in range(1,340)]))\n",
     "\n",
     "# for col in columns:\n",
     "#     if col in X_train.columns:\n",
@@ -206,8 +197,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-06T08:46:05.341356Z",
-     "start_time": "2019-09-06T08:45:34.052511Z"
+     "end_time": "2019-09-06T13:33:50.316218Z",
+     "start_time": "2019-09-06T13:33:18.468528Z"
     }
    },
    "outputs": [],
@@ -223,37 +214,14 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-06T08:46:05.346118Z",
-     "start_time": "2019-09-06T08:46:05.343198Z"
+     "end_time": "2019-09-06T13:33:51.495756Z",
+     "start_time": "2019-09-06T13:33:50.318501Z"
     }
    },
    "outputs": [],
    "source": [
-    "# best_params = {'num_leaves': 302,\n",
-    "#                  'max_depth': 157,\n",
-    "#                  'subsample_for_bin': 290858,\n",
-    "#                  'min_child_samples': 79,\n",
-    "#                  'reg_alpha': 0.9919573524807885,\n",
-    "#                  'colsample_bytree': 0.5653288564015742,\n",
-    "#                  'learning_rate': 0.028565794309535042}\n",
-    "# mod = LGBMClassifier(metric='auc',\n",
-    "#                      boosting_type='gbdt')\n",
-    "# mod.set_params(**best_params)\n",
-    "# rfe = RFECV(mod, step=25, min_features_to_select=150, cv=4, scoring='roc_auc', verbose=1)\n",
-    "# rfe.fit(X_train, y_train)\n",
-    "\n",
-    "# X_train = rfe.transform(X_train)\n",
-    "# X_test = rfe.transform(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "X_train.drop(['TransactionDT', 'TransactionAmt'], axis=1, inplace=True)\n",
-    "X_test.drop(['TransactionDT', 'TransactionAmt'],, axis=1, inplace=True)"
+    "X_test.drop(['TransactionDT', 'TransactionAmt'], axis=1, inplace=True)"
    ]
   },
   {
@@ -261,8 +229,116 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-06T08:46:05.352414Z",
-     "start_time": "2019-09-06T08:46:05.348333Z"
+     "end_time": "2019-09-06T14:24:44.421044Z",
+     "start_time": "2019-09-06T13:33:51.497594Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting estimator with 431 features.\n",
+      "Fitting estimator with 406 features.\n",
+      "Fitting estimator with 381 features.\n",
+      "Fitting estimator with 356 features.\n",
+      "Fitting estimator with 331 features.\n",
+      "Fitting estimator with 306 features.\n",
+      "Fitting estimator with 281 features.\n",
+      "Fitting estimator with 256 features.\n",
+      "Fitting estimator with 231 features.\n",
+      "Fitting estimator with 206 features.\n",
+      "Fitting estimator with 181 features.\n",
+      "Fitting estimator with 156 features.\n",
+      "Fitting estimator with 131 features.\n",
+      "Fitting estimator with 106 features.\n",
+      "Fitting estimator with 81 features.\n",
+      "Fitting estimator with 56 features.\n",
+      "Fitting estimator with 431 features.\n",
+      "Fitting estimator with 406 features.\n",
+      "Fitting estimator with 381 features.\n",
+      "Fitting estimator with 356 features.\n",
+      "Fitting estimator with 331 features.\n",
+      "Fitting estimator with 306 features.\n",
+      "Fitting estimator with 281 features.\n",
+      "Fitting estimator with 256 features.\n",
+      "Fitting estimator with 231 features.\n",
+      "Fitting estimator with 206 features.\n",
+      "Fitting estimator with 181 features.\n",
+      "Fitting estimator with 156 features.\n",
+      "Fitting estimator with 131 features.\n",
+      "Fitting estimator with 106 features.\n",
+      "Fitting estimator with 81 features.\n",
+      "Fitting estimator with 56 features.\n",
+      "Fitting estimator with 431 features.\n",
+      "Fitting estimator with 406 features.\n",
+      "Fitting estimator with 381 features.\n",
+      "Fitting estimator with 356 features.\n",
+      "Fitting estimator with 331 features.\n",
+      "Fitting estimator with 306 features.\n",
+      "Fitting estimator with 281 features.\n",
+      "Fitting estimator with 256 features.\n",
+      "Fitting estimator with 231 features.\n",
+      "Fitting estimator with 206 features.\n",
+      "Fitting estimator with 181 features.\n",
+      "Fitting estimator with 156 features.\n",
+      "Fitting estimator with 131 features.\n",
+      "Fitting estimator with 106 features.\n",
+      "Fitting estimator with 81 features.\n",
+      "Fitting estimator with 56 features.\n",
+      "Fitting estimator with 431 features.\n",
+      "Fitting estimator with 406 features.\n",
+      "Fitting estimator with 381 features.\n",
+      "Fitting estimator with 356 features.\n",
+      "Fitting estimator with 331 features.\n",
+      "Fitting estimator with 306 features.\n",
+      "Fitting estimator with 281 features.\n",
+      "Fitting estimator with 256 features.\n",
+      "Fitting estimator with 231 features.\n",
+      "Fitting estimator with 206 features.\n",
+      "Fitting estimator with 181 features.\n",
+      "Fitting estimator with 156 features.\n",
+      "Fitting estimator with 131 features.\n",
+      "Fitting estimator with 106 features.\n",
+      "Fitting estimator with 81 features.\n",
+      "Fitting estimator with 56 features.\n",
+      "Fitting estimator with 431 features.\n",
+      "Fitting estimator with 406 features.\n",
+      "Fitting estimator with 381 features.\n",
+      "Fitting estimator with 356 features.\n",
+      "Fitting estimator with 331 features.\n",
+      "Fitting estimator with 306 features.\n",
+      "Fitting estimator with 281 features.\n",
+      "Fitting estimator with 256 features.\n",
+      "Fitting estimator with 231 features.\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_params = {'num_leaves': 302,\n",
+    "                 'max_depth': 157,\n",
+    "                 'subsample_for_bin': 290858,\n",
+    "                 'min_child_samples': 79,\n",
+    "                 'reg_alpha': 0.9919573524807885,\n",
+    "                 'colsample_bytree': 0.5653288564015742,\n",
+    "                 'learning_rate': 0.028565794309535042}\n",
+    "mod = LGBMClassifier(metric='auc',\n",
+    "                     boosting_type='gbdt')\n",
+    "mod.set_params(**best_params)\n",
+    "rfe = RFECV(mod, step=25, min_features_to_select=150, cv=4, scoring='roc_auc', verbose=1)\n",
+    "rfe.fit(X_train, y_train)\n",
+    "\n",
+    "X_train = rfe.transform(X_train)\n",
+    "X_test = rfe.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-06T14:24:44.536258Z",
+     "start_time": "2019-09-06T14:24:44.489199Z"
     }
    },
    "outputs": [],
@@ -274,11 +350,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-06T08:46:05.359679Z",
-     "start_time": "2019-09-06T08:46:05.355767Z"
+     "end_time": "2019-09-06T14:24:44.564186Z",
+     "start_time": "2019-09-06T14:24:44.539005Z"
     }
    },
    "outputs": [],
@@ -288,11 +364,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-06T08:46:05.365967Z",
-     "start_time": "2019-09-06T08:46:05.362337Z"
+     "end_time": "2019-09-06T14:24:44.578969Z",
+     "start_time": "2019-09-06T14:24:44.567374Z"
     }
    },
    "outputs": [],
@@ -302,11 +378,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-06T08:46:05.374936Z",
-     "start_time": "2019-09-06T08:46:05.368324Z"
+     "end_time": "2019-09-06T14:24:44.618267Z",
+     "start_time": "2019-09-06T14:24:44.581778Z"
     }
    },
    "outputs": [],
@@ -348,11 +424,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-06T08:46:05.382895Z",
-     "start_time": "2019-09-06T08:46:05.377508Z"
+     "end_time": "2019-09-06T14:24:44.631917Z",
+     "start_time": "2019-09-06T14:24:44.621197Z"
     },
     "scrolled": true
    },
@@ -381,11 +457,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-06T12:51:34.659151Z",
-     "start_time": "2019-09-06T11:22:28.184891Z"
+     "end_time": "2019-09-06T15:13:53.571163Z",
+     "start_time": "2019-09-06T14:24:44.634797Z"
     },
     "scrolled": true
    },
@@ -393,7 +469,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68b3ada96bd84ef3aa085586f67cd9ec",
+       "model_id": "e1075123d2084aa1b970ab2c3675d71b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -408,14 +484,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ROC accuracy: 0.9752166854560683, Train: 0.9999880028138726\n",
-      "ROC accuracy: 0.978549489713329, Train: 0.9999846402519508\n",
-      "ROC accuracy: 0.9775330875670358, Train: 0.9999857411401932\n",
-      "ROC accuracy: 0.9779064734264544, Train: 0.9999820012259492\n",
-      "ROC accuracy: 0.9759618973923397, Train: 0.9999879506811296\n",
-      "ROC accuracy: 0.9760439850075724, Train: 0.999982252164232\n",
-      "ROC accuracy: 0.9777317260455965, Train: 0.9999817054370517\n",
-      "ROC accuracy: 0.9770691545023485, Train: 0.9999847023569826\n",
+      "ROC accuracy: 0.9747431963385, Train: 0.9999885797125879\n",
+      "ROC accuracy: 0.9783240331977164, Train: 0.9999843937860894\n",
+      "ROC accuracy: 0.9776021473477676, Train: 0.999985213046599\n",
+      "ROC accuracy: 0.9776277016948994, Train: 0.9999816344110959\n",
+      "ROC accuracy: 0.9763353593387132, Train: 0.9999850285854255\n",
+      "ROC accuracy: 0.975954065269458, Train: 0.9999858101613444\n",
+      "ROC accuracy: 0.9777313673449186, Train: 0.9999735340342005\n",
+      "ROC accuracy: 0.9765956112785853, Train: 0.99998214722258\n",
       "\n",
       "\n"
      ]
@@ -423,10 +499,10 @@
     {
      "data": {
       "text/plain": [
-       "0.9770015623888431"
+       "0.9768641852263198"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
