--- a/model.ipynb
+++ b/model.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:14:00.729504Z",
-     "start_time": "2019-09-12T09:13:58.582905Z"
+     "end_time": "2019-09-12T11:52:57.522953Z",
+     "start_time": "2019-09-12T11:52:55.450162Z"
     }
    },
    "outputs": [
@@ -34,13 +34,13 @@
     "import optuna\n",
     "from prunedcv import PrunedCV\n",
     "\n",
-    "from codes.utils import import_data, drop_columns, cross_val_score_auc, reduce_mem_usage\n",
+    "from codes.utils import import_data, drop_columns, cross_val_score_auc, reduce_mem_usage, fix_dtypes\n",
     "from codes.fe_browser import latest\n",
     "from codes.fe_emails import proton, mappings, labeling\n",
     "from codes.fe_cards import stats\n",
     "from codes.fe_date import dates\n",
     "from codes.fe_relatives import divisions\n",
-    "from codes.fe_categorical import pairs, wtf\n",
+    "from codes.fe_categorical import pairs, wtf, cat_limit\n",
     "from codes.prepro import prepro\n",
     "from codes.fe_users import users_stats\n",
     "\n",
@@ -55,8 +55,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:14:00.739904Z",
-     "start_time": "2019-09-12T09:14:00.736826Z"
+     "end_time": "2019-09-12T11:52:57.527885Z",
+     "start_time": "2019-09-12T11:52:57.524975Z"
     },
     "lines_to_next_cell": 2
    },
@@ -70,11 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:17:51.730403Z",
-     "start_time": "2019-09-12T09:17:42.927573Z"
+     "end_time": "2019-09-12T12:44:29.779600Z",
+     "start_time": "2019-09-12T12:44:20.778511Z"
     },
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a",
@@ -96,19 +96,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:20:41.734883Z",
-     "start_time": "2019-09-12T09:17:51.732008Z"
+     "end_time": "2019-09-12T12:48:16.689260Z",
+     "start_time": "2019-09-12T12:44:29.781632Z"
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/piotrgabrys/data/python3/ieee/codes/fe_users.py:17: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
+      "of pandas will change to not sort by default.\n",
+      "\n",
+      "To accept the future behavior, pass 'sort=False'.\n",
+      "\n",
+      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
+      "\n",
+      "  all_data = pd.concat([train, test])\n"
+     ]
+    }
+   ],
    "source": [
-    "train, test = users_stats(train, test)\n",
+    "train, test = fix_dtypes(train, test)\n",
     "\n",
-    "# train, test = drop_columns(train, test)\n",
+    "train, test = users_stats(train, test)\n",
     "\n",
     "train, test = latest(train, test)\n",
     "\n",
@@ -118,7 +133,6 @@
     "test['nulls1'] = test.isna().sum(axis=1)\n",
     "\n",
     "train, test = mappings(train, test)\n",
-    "train, test = labeling(train, test)\n",
     "\n",
     "train, test = stats(train, test)\n",
     "\n",
@@ -127,10 +141,32 @@
     "train, test = dates(train, test)\n",
     "\n",
     "train, test = pairs(train, test)\n",
-    "train, test = wtf(train, test)\n",
+    "\n",
+    "cat_list = list(train.dtypes[train.dtypes == 'object'].index)\n",
+    "cats_to_list = []\n",
+    "for feat in cat_list:\n",
+    "    train, test = cat_limit(train, test, feat)\n",
+    "    cats_to_list.extend(list(train[feat].unique()))\n",
+    "    \n",
+    "cats_to_list = list(set(cats_to_list))\n",
+    "cats_to_list.remove('unknown')\n",
+    "\n",
+    "cats_to_dict = {}\n",
+    "cats_to_dict['unknown'] = -1\n",
+    "cnt = 1 \n",
+    "for feat in cats_to_list:\n",
+    "    cats_to_dict[feat] = cnt\n",
+    "    cnt += 1\n",
+    "    \n",
+    "for feat in cat_list:\n",
+    "    train[feat] = train[feat].map(cats_to_dict)\n",
+    "    test[feat] = test[feat].map(cats_to_dict)\n",
+    "    train.loc[train.loc[:, feat] < 0, feat] = np.random.rand((train.loc[:, feat] < 0).sum()) - 1\n",
+    "    test.loc[test.loc[:, feat] < 0, feat] = np.random.rand((test.loc[:, feat] < 0).sum()) - 1\n",
+    "\n",
+    "# train, test = wtf(train, test)\n",
     "\n",
     "y_train = train['isFraud'].copy()\n",
-    "\n",
     "\n",
     "X_train = train.drop('isFraud', axis=1)\n",
     "X_test = test.copy()\n",
@@ -150,11 +186,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:20:53.518276Z",
-     "start_time": "2019-09-12T09:20:41.737375Z"
+     "end_time": "2019-09-12T12:48:27.896697Z",
+     "start_time": "2019-09-12T12:48:16.692520Z"
     }
    },
    "outputs": [],
@@ -172,11 +208,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:21:13.257007Z",
-     "start_time": "2019-09-12T09:20:53.520150Z"
+     "end_time": "2019-09-12T12:48:52.346486Z",
+     "start_time": "2019-09-12T12:48:27.898338Z"
     }
    },
    "outputs": [
@@ -184,8 +220,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mem. usage decreased to 1965.23 Mb (7.2% reduction)\n",
-      "Mem. usage decreased to 1670.97 Mb (7.2% reduction)\n"
+      "Mem. usage decreased to 1953.97 Mb (8.5% reduction)\n",
+      "Mem. usage decreased to 1661.30 Mb (8.5% reduction)\n"
      ]
     }
    ],
@@ -196,11 +232,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:23:26.461876Z",
-     "start_time": "2019-09-12T09:21:13.259307Z"
+     "end_time": "2019-09-12T12:51:11.505282Z",
+     "start_time": "2019-09-12T12:48:52.349033Z"
     }
    },
    "outputs": [],
@@ -215,11 +251,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:23:28.800511Z",
-     "start_time": "2019-09-12T09:23:26.466666Z"
+     "end_time": "2019-09-12T12:51:13.931690Z",
+     "start_time": "2019-09-12T12:51:11.527005Z"
     }
    },
    "outputs": [],
@@ -230,11 +266,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:27:15.571332Z",
-     "start_time": "2019-09-12T09:23:28.802821Z"
+     "end_time": "2019-09-12T12:55:34.393770Z",
+     "start_time": "2019-09-12T12:51:13.935247Z"
     }
    },
    "outputs": [
@@ -242,8 +278,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "859\n",
-      "492\n"
+      "854\n",
+      "481\n"
      ]
     }
    ],
@@ -261,11 +297,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:27:15.586010Z",
-     "start_time": "2019-09-12T09:27:15.576747Z"
+     "end_time": "2019-09-12T12:55:34.417334Z",
+     "start_time": "2019-09-12T12:55:34.409537Z"
     }
    },
    "outputs": [],
@@ -282,11 +318,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:27:15.595839Z",
-     "start_time": "2019-09-12T09:27:15.588701Z"
+     "end_time": "2019-09-12T12:55:34.425631Z",
+     "start_time": "2019-09-12T12:55:34.420475Z"
     }
    },
    "outputs": [],
@@ -301,11 +337,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:27:15.601931Z",
-     "start_time": "2019-09-12T09:27:15.597742Z"
+     "end_time": "2019-09-12T12:55:34.434210Z",
+     "start_time": "2019-09-12T12:55:34.428928Z"
     }
    },
    "outputs": [],
@@ -315,11 +351,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 61,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:27:15.611505Z",
-     "start_time": "2019-09-12T09:27:15.604175Z"
+     "end_time": "2019-09-12T12:55:34.447772Z",
+     "start_time": "2019-09-12T12:55:34.437009Z"
     }
    },
    "outputs": [],
@@ -352,11 +388,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 62,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:27:15.620707Z",
-     "start_time": "2019-09-12T09:27:15.614449Z"
+     "end_time": "2019-09-12T12:55:34.459401Z",
+     "start_time": "2019-09-12T12:55:34.450176Z"
     },
     "scrolled": true
    },
@@ -387,18 +423,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 63,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T10:10:22.509021Z",
-     "start_time": "2019-09-12T09:27:15.623294Z"
+     "end_time": "2019-09-12T13:53:20.820721Z",
+     "start_time": "2019-09-12T12:55:34.462071Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "efe715c90bd54e03aa9c8cdd43558880",
+       "model_id": "22caeb39b3d0436a9cdf506433449f2e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -413,14 +449,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ROC accuracy: 0.9720145659778652, Train: 0.9999286851251716\n",
-      "ROC accuracy: 0.9751973430652895, Train: 0.9999328083814578\n",
-      "ROC accuracy: 0.9760593919549079, Train: 0.9998439324257781\n",
-      "ROC accuracy: 0.9759738566311452, Train: 0.9999420044309371\n",
-      "ROC accuracy: 0.972072614889331, Train: 0.9999141682082874\n",
-      "ROC accuracy: 0.9726377525006845, Train: 0.9999124343601277\n",
-      "ROC accuracy: 0.9749191757697562, Train: 0.9999151580131841\n",
-      "ROC accuracy: 0.9739376183885246, Train: 0.9998564849540118\n",
+      "ROC accuracy: 0.9676650443569281, Train: 0.9999605843186911\n",
+      "ROC accuracy: 0.9713372833875739, Train: 0.9999935874507728\n",
+      "ROC accuracy: 0.9735183811543917, Train: 0.9999641123743416\n",
+      "ROC accuracy: 0.9728271039992634, Train: 0.9999702495073965\n",
+      "ROC accuracy: 0.9693236040944672, Train: 0.9999760357981837\n",
+      "ROC accuracy: 0.9691145944425243, Train: 0.9999765673773133\n",
+      "ROC accuracy: 0.972783575195961, Train: 0.9999754496313613\n",
+      "ROC accuracy: 0.9705620495978529, Train: 0.9999855384295235\n",
       "\n",
       "\n"
      ]
@@ -428,10 +464,10 @@
     {
      "data": {
       "text/plain": [
-       "0.974101539897188"
+       "0.9708914545286202"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,23 +492,23 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T08:51:47.645061Z",
-     "start_time": "2019-09-12T08:49:49.365Z"
+     "end_time": "2019-09-12T11:49:50.503328Z",
+     "start_time": "2019-09-12T11:46:58.408Z"
     }
    },
    "outputs": [],
    "source": [
-    "# ROC accuracy: 0.9707565062294428, Train: 0.9999416292415686\n",
-    "# ROC accuracy: 0.9758652343514882, Train: 0.9998818960438143\n",
-    "# ROC accuracy: 0.9747893539459415, Train: 0.9999033992474002\n",
-    "# ROC accuracy: 0.9741729952670382, Train: 0.999944229888998\n",
-    "# ROC accuracy: 0.9735064735460197, Train: 0.9999515715657177\n",
-    "# ROC accuracy: 0.9728703535857148, Train: 0.9999501665218518\n",
-    "# ROC accuracy: 0.9746020273044912, Train: 0.9999374155994768\n",
-    "# ROC accuracy: 0.973164729538134, Train: 0.9999402925194638\n",
+    "# ROC accuracy: 0.9720145659778652, Train: 0.9999286851251716\n",
+    "# ROC accuracy: 0.9751973430652895, Train: 0.9999328083814578\n",
+    "# ROC accuracy: 0.9760593919549079, Train: 0.9998439324257781\n",
+    "# ROC accuracy: 0.9759738566311452, Train: 0.9999420044309371\n",
+    "# ROC accuracy: 0.972072614889331, Train: 0.9999141682082874\n",
+    "# ROC accuracy: 0.9726377525006845, Train: 0.9999124343601277\n",
+    "# ROC accuracy: 0.9749191757697562, Train: 0.9999151580131841\n",
+    "# ROC accuracy: 0.9739376183885246, Train: 0.9998564849540118\n",
     "\n",
     "\n",
-    "# 0.9737159592210338"
+    "# 0.974101539897188"
    ]
   }
  ],
